[tool.poetry]
name = "cockpit"
version = "0.1.0"
description = ""
authors = ["Laurent Paoletti <lp@providenz.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
psycopg2-binary = "^2.9.2"
django-environ = "^0.8.1"
django-admin-list-filter-dropdown = "^1.0.3"
django-logentry-admin = "^1.1.0"
django-json-widget = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
